--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
-      "**/*"
+      "**./src/assets*"
     ],
     "ios": {
       "supportsTablet": true
