--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-reanimated": "^1.3.2",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^9.13.3",
     "react-native-svg-transformer": "^0.13.0",
     "react-native-vector-icons": "^6.6.0",
