--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "^1.3.2",
     "react-native-svg": "^9.13.3",
     "react-native-svg-transformer": "^0.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
+    "react-native-webview-leaflet": "^4.3.4",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6"
