--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-maps": "0.26.1",
+    "react-native-modal": "^11.5.1",
     "react-native-reanimated": "^1.3.2",
+    "react-native-select-two": "^1.0.6",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^9.13.3",
     "react-native-svg-transformer": "^0.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-native-webview-leaflet": "^4.3.4",
+    "react-native-webview-leaflet": "https://github.com/andrerim/react-native-webview-leaflet/tarball/master",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6"
